  **************
  * v2.1 Beta 1
  **************

    * Bugfix CORE-1271
        Creation of invalid procedures/triggers allowed
      Contributor(s):
        Adriano dos Santos Fernandes <adrianosf at uol.com.br>

    * Bugfix CORE-1267
        Small bug with default value for domains in PSQL
      Contributor(s):
        Adriano dos Santos Fernandes <adrianosf at uol.com.br>

    * Bugfix CORE-1256
        Table columns hide destination variables of RETURNING INTO
      Contributor(s):
        Adriano dos Santos Fernandes <adrianosf at uol.com.br>

    * Bugfix CORE-1253
        LIST(DISTINCT) concatenate VARCHAR values as CHAR
      Contributor(s):
        Adriano dos Santos Fernandes <adrianosf at uol.com.br>

    * Bugfix CORE-1249
        Full shutdown mode doesn't work on Classic if there are other connections to the database
      Contributor(s):
        Dmitry Yemanov <dimitr at firebirdsql.org>

    * Bugfix CORE-1248
        Incorrect timestamp arithmetics when one of the operands is negative number
      Contributor(s):
        Vlad Horsun <hvlad at users.sourceforge.net>

    * Bugfix CORE-1245
        Incorrect column values with outer joins and views
      Contributor(s):
        Adriano dos Santos Fernandes <adrianosf at uol.com.br>

    * Bugfix CORE-1244
        Server crash on "select * from <recursive CTE>"
      Contributor(s):
        Adriano dos Santos Fernandes <adrianosf at uol.com.br>
        Vlad Horsun <hvlad at users.sourceforge.net>

    * Bugfix CORE-1240
        Any task, using libfbclient, hangs on exit (Darwin PPC)
      Contributor(s):
        Alex Peshkov <peshkoff at mail.ru>

    * Bugfix CORE-1237
        GBAK does not create backup in service_mgr mode if there is no space on disk, no error reported
      Contributor(s):
        Alex Peshkov <peshkoff at mail.ru>

    * Bugfix CORE-1228
        Database often became corrupted after an out of disk space condition
      Contributor(s):