@@ -2,6 +2,16 @@
   * v2.1 Beta 1
   **************
 
+    * Bugfix CORE-1292
+        Can't create table using long username and UTF8 as attachment charset
+      Contributor(s):
+        Adriano dos Santos Fernandes <adrianosf at uol.com.br>
+
+    * Bugfix CORE-1286
+        Bug with COMPUTED BY fields
+      Contributor(s):
+        Adriano dos Santos Fernandes <adrianosf at uol.com.br>
+
     * Bugfix CORE-1271
         Creation of invalid procedures/triggers allowed
       Contributor(s):
